# CLion_ResizeBiliner_C

./: CMakeLists.txt  README.md  main.c
